Centered images in carousel in case of varying heights. Fixed line wrapping in mobile menu.

--- a/styles/global.css
+++ b/styles/global.css
@@ -22,3 +22,10 @@ body:before {
 .newsPostBody span a {
   color: #9ca3af;
 }
+
+/* Center alignment for photos in carousel components (in case all are not the same height) */
+
+ul.slider {
+  display: flex;
+  align-items: center;
+}
